# status-villain

./: .pre-commit-config.yaml  README.md  codecov.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: main_ci.yaml
status_villain/: commands.py  database.py  main.py  models.py
status_villain/tasks/: tasks.py
tests/: tasks_test.py
